@@ -1,134 +1,0 @@
-/* $Id$ */
-
-/*
-This file contains colors, graphics, and text effects. 
-
-Colors used:
-  #CCCCCC Borders, post seperator, avatar frame, statistics subheader.
-  #494949 Table header font color.
-*/
-
-/*** FORUM & TOPIC LIST ******************************************************/
-
-/* General */
-.forum-table {
-  border: 1px solid #CCCCCC;
-}
-
-/* Headers */
-.forum-table th {
-  color: #494949;
-  background-color: #CCCCCC;
-  border-bottom: none;
-}
-
-.forum-table th a,
-.forum-table th a:visited,
-.forum-table th a:link {
-  color: #494949;
-  font-weight: bold;
-}
-
-.forum-table tr.even {
-  background-color: #EEEEEE;
-}
-
-.forum-table tr.odd {
-  background-color: #ffffff;
-}  
-
-.forum-table td {
-  border: 1px solid #CCCCCC;
-}
-
-/* Topic listings */
-.forum-table tr.forum-last-sticky {
-  border-bottom: 10px solid #CCCCCC;
-}
-
-.forum-table .sticky-label {
-  font-weight: bold;
-}
-
-/*** FORUM STATISTICS *********************************************************/
-
-#forum-statistics {
-  border: 1px solid #CCCCCC;
-}
-
-#forum-statistics-header {
-  background-color: #CCCCCC;
-  font-weight: bold;
-}
-
-.forum-statistics-sub-header {
-  border-top: 1px solid #CCCCCC;
-  border-bottom: 1px solid #CCCCCC;
-  font-weight: bold;
-}
-
-/*** FORUM THREADS ***********************************************************/
-
-.forum-post {
-  border: 1px solid #CCCCCC;
-}
-
-/* Header at the top of each post */
-.forum-post-info {
-  background-color: #CCCCCC;
-  color: #494949;
-  font-weight: bold;
-  border-bottom: 1px solid #CCCCCC;
-}
-
-.forum-posted-on {
-  font-size: .8em;
-  font-weight: bold;
-}
-
-.forum-post-number a {
-  color: #ffffff !important;
-}
-
-.forum-post-title {
-  font-weight: bold;
-  border-bottom: 1px solid #CCCCCC;
-}
-
-/* Author information pane */
-.forum-post-panel-sub .author-pane .author-name {
-  font-size: 120%;
-  font-weight: bold;
-}
-
-.forum-post-panel-sub .author-pane .picture img {
-  border: 1px solid #CCCCCC;
-}
-
-.forum-post-panel-sub .author-pane .author-pane-label {
-  font-weight: bold;
-}
-
-/* Post text area */
-.forum-post-panel-main {
-  border-left: 1px solid #CCCCCC;
-}
-
-/* Signature */
-.author-signature {
-  font-size: .8em;
-}
-
-/* Post footer */
-.forum-post-footer {
-  border-top: 1px solid #CCCCCC;
-}
-
-.forum-jump-links {
-  border-right: 1px solid #CCCCCC;
-}
-
-/* Box under top post before first reply */
-.forum-top-post-footer {
-  border: 1px solid #CCCCCC;
-}
