@@ -1,6 +1,0 @@
-; $Id$
-
-name = Boxy
-description = Very basic style, mostly adding borders to Naked.
-version = 2.x
-base style = naked
