@@ -124,7 +124,7 @@ td.forum-last-reply {
 }
 
 .forum-table-topics td.views-field-title {
-  
+
 }
 
 .forum-table-topics td.views-field-comment-count,
@@ -194,14 +194,13 @@ td.forum-last-reply {
 
 /*** ICONS LEGEND ***********************************************************/
 
-.forum-folder-legend {
+.forum-list-icon-legend {
   margin-bottom: 30px;
 }
 
-.forum-folder-legend div {
+.forum-list-icon-legend div {
   float: left;
-  padding: 15px 0 15px 52px;
-  margin-right: 10px;
+  margin-right: 30px;
 }
 
 .forum-topic-legend div {
