@@ -1,10 +1,5 @@
 /* FORUM LIST ICONS *********************************************************/
-td.forum-icon {
-  vertical-align: middle;
-  text-align: center;
-}
-
-.forum-icon-wrapper {
+.forum-list-icon-wrapper {
   border-top: 1px solid #EAF8E4;
   background: #C1C1C1;
   background: -webkit-gradient(linear, left top, left bottom, from(#DFDFDF), to(#C1C1C1));
@@ -23,34 +18,19 @@ td.forum-icon {
   margin: 10px;
   width: 50px;
   height: 50px;
-  display: block; 
-}
-
-.forum-icon-wrapper span {
-  text-indent: -9999px;
-  width: 50px;
-  height: 50px;
   display: block;
 }
 
-tr.even td.forum-folder .forum-icon-wrapper span, 
-tr.odd td.forum-folder .forum-icon-wrapper span {
+tr.even td.forum-list-icon-default .forum-list-icon-wrapper span,
+tr.odd td.forum-list-icon-default .forum-list-icon-wrapper span,
+.forum-list-icon-legend .forum-list-icon-default {
   background: transparent url(images/forum_list_default.png) no-repeat center center;
 }
 
-tr.even td.forum-folder-new-posts .forum-icon-wrapper span, 
-tr.odd td.forum-folder-new-posts .forum-icon-wrapper span {
+tr.even td.forum-list-icon-new-posts .forum-list-icon-wrapper span,
+tr.odd td.forum-list-icon-new-posts .forum-list-icon-wrapper span,
+.forum-list-icon-legend .forum-list-icon-new-posts {
   background: transparent url(images/forum_list_new_posts.png) no-repeat center center;
-}
-
-
-/* FORUM LIST ICON LEGEND ***************************************************/
-.forum-folder-legend .forum-folder {
-  background: transparent url(images/forum_list_default.png) no-repeat top left;
-}
-
-.forum-folder-legend .forum-folder-new-posts {
-  background: transparent url(images/forum_list_new_posts.png) no-repeat top left;
 }
 
 /* TOPIC LIST ICONS *********************************************************/
@@ -132,10 +112,10 @@ span.topic-icon {
 /* Based on http://css-tricks.com/examples/ButtonMaker */
 
 a.af-button-large,
-a.af-button-large:link, 
+a.af-button-large:link,
 a.af-button-large:visited,
 a.af-button-small,
-a.af-button-small:link, 
+a.af-button-small:link,
 a.af-button-small:visited,
 a.author-pane-link,
 a.author-pane-link:link,
@@ -147,38 +127,38 @@ a.author-pane-link:visited {
 .af-button-large,
 .af-button-small,
 .author-pane-link {
-   display: block;
-   border-top: 1px solid #EAF8E4;
-   background: #C1C1C1;
-   background: -webkit-gradient(linear, left top, left bottom, from(#DFDFDF), to(#C1C1C1));
-   background: -moz-linear-gradient(top, #DFDFDF, #C1C1C1);
-   -webkit-border-radius: 5px;
-   -moz-border-radius: 5px;
-   border-radius: 5px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #333333;
-   font-family: Helvetica, Arial, Sans-Serif;
-   text-decoration: none;
-   vertical-align: middle;
+  display: block;
+  border-top: 1px solid #EAF8E4;
+  background: #C1C1C1;
+  background: -webkit-gradient(linear, left top, left bottom, from(#DFDFDF), to(#C1C1C1));
+  background: -moz-linear-gradient(top, #DFDFDF, #C1C1C1);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+  box-shadow: rgba(0,0,0,1) 0 1px 0;
+  text-shadow: rgba(0,0,0,.4) 0 1px 0;
+  color: #333333;
+  font-family: Helvetica, Arial, Sans-Serif;
+  text-decoration: none;
+  vertical-align: middle;
 }
 
 a.af-button-large:hover,
 a.af-button-small:hover,
 a.author-pane-link:hover {
-   background: #C1C1C1;
-   color: #333333;
-   border-top-color: #EFEFEF;
+  background: #C1C1C1;
+  color: #333333;
+  border-top-color: #EFEFEF;
 }
-   
+
 a.af-button-large:active,
 a.af-button-small:active,
 a.author-pane-link:active {
-   background: #C1C1C1;
-   color: #333333;
-   border-top-color: #EFEFEF;
+  background: #C1C1C1;
+  color: #333333;
+  border-top-color: #EFEFEF;
 }
 
 .af-button-large span {
@@ -279,4 +259,3 @@ a.author-pane-link:active {
 .forum-post-panel-sub .author-relationship-remove-icon.author-pane-link {
   background: transparent url(images/ap_contact_remove.png) no-repeat;
 }
-
